                _              __            _   _
       _ __ ___| |_ _ __ ___  / _| ___  _ __| |_| |__
      | '__/ _ \ __| '__/ _ \| |_ / _ \| '__| __| '_ \
      | | |  __/ |_| | | (_) |  _| (_) | |  | |_| | | |
      |_|  \___|\__|_|  \___/|_|  \___/|_|   \__|_| |_|

            RetroForth & nga 2024.4 Release Notes

================================================================

- removed duplicate typedef in tools/retro-muri.c (sevan)
- fixed a bug in load_image()                 (C) (sevan)
- err:notfound message no longer in C         (C) (sevan)
- add -v for verbose mode                     (C)
- now skip execuion of NOP instructions       (C)
- fix some casting issues in C                (C)
- added an implementation of Nga in D         (D)
- removed some unneeded files
- update tools/missing-dsource.retro
- add missing source data for vocabularies:
  a: d: double: err: file: fll: mem: script:

================================================================