@@ -19,5 +19,7 @@
 - update tools/missing-dsource.retro
 - add missing source data for vocabularies:
   a: d: double: err: file: fll: mem: script:
+- use strlcpy() in tools/retro-muri.c
+- quieter output when building
 
 ================================================================
